Deprecate security-related methods & partially remove security code   * As part of the change, scrunner's command-line options were changed     slightly: --trustlevel was removed and --unsetScripting was added.